Update repl page

--- a/src/pages/repl.jade
+++ b/src/pages/repl.jade
@@ -24,8 +24,8 @@ block content
             option Bar
             option Baz
 
-    pre.repl-input
-      code.
+    pre.repl-input: code
+      :highlight
         import * as _ from 'lodash';
 
         /**
@@ -109,8 +109,8 @@ block content
 
         export default Namespace;
 
-    pre.repl-output
-      code.
+    pre.repl-output: code
+      :highlight
         'use strict';
 
         var _ = require('lodash');
