--- a/src/pages/compare.jade
+++ b/src/pages/compare.jade
@@ -11,3 +11,26 @@ block content
         .col-md-12
           h1 Compare
           p Differences between 6to5 and other ES6 transpilers.
+
+  .container
+    .row
+      .col-md-3.col-md-push-9
+        .sidebar
+          ul.nav
+            li
+              a(href="#differences") Differences
+              ul.nav
+                li: a(href="#readable-code") Readable code
+                li: a(href="#static-analysis") Static analysis
+                li: a(href="#spec-compliancy") Spec Compliancy
+            li
+              a(href="#comparison-to-other-transpilers") Comparison to other transpilers
+              ul.nav
+                li: a(href="#features") Features
+                li: a(href="#language-support") Language Support
+                li: a(href="#-traceur-https-github-com-google-traceur-compiler-") Traceur
+                li: a(href="#-es6now-https-github-com-zenparsing-es6now-") es6now
+                li: a(href="#-es6-transpiler-https-github-com-termi-es6-transpiler-") es6-transpiler
+
+      .col-md-9.col-md-pull-3.page-content
+        include:markdown ../content/compare.md
