--- a/src/partials/layout.jade
+++ b/src/partials/layout.jade
@@ -31,6 +31,7 @@ html(lang="en" class='page-' + pageClass)
             li(class=pageClass === 'features' ? 'active' : ''): a(href="features.html") Features
             li(class=pageClass === 'usage' ? 'active' : ''): a(href="usage.html") Usage
             li(class=pageClass === 'compare' ? 'active' : ''): a(href="compare.html") Compare
+            li(class=pageClass === 'caveats' ? 'active' : ''): a(href="caveats.html") Caveats
             li(class=pageClass === 'plugins' ? 'active' : ''): a(href="plugins.html") Plugins
             li(class=pageClass === 'repl' ? 'active' : ''): a(href="repl.html") REPL
             li: a(href="https://gitter.im/6to5/6to5") Support
