Add better headlines for tour/usage

--- a/src/pages/tour.jade
+++ b/src/pages/tour.jade
@@ -8,7 +8,7 @@ block content
   .page-header
     .container
       h1 Tour
-      p Overview of ECMAScript 6 features.
+      p A detailed overview of ECMAScript 6 features.
 
   .container
     .row
