--- a/src/pages/usage.jade
+++ b/src/pages/usage.jade
@@ -8,7 +8,7 @@ block content
   .page-header
     .container
       h1 Usage
-      p Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+      p All of the built-in ways to use 6to5.
 
   .container
     .row
