--- a/src/styles/components/featurette.less
+++ b/src/styles/components/featurette.less
@@ -1,15 +1,14 @@
 .featurette {
   display: block;
-
-  &,
-  &:hover,
-  &:active {
-    color: inherit;
-  }
+  padding: 20px 0;
 
   h2 {
     font-weight: 600;
     line-height: 1;
+
+    a {
+      color: inherit;
+    }
 
     @media (min-width: @screen-sm) {
       font-size: 50px;
@@ -29,6 +28,6 @@
   }
 
   &-divider {
-    margin: 40px 0;
+    margin: 20px 0;
   }
 }
