--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -49,6 +49,9 @@
 @import "../../node_modules/bootstrap/less/utilities.less";
 @import "../../node_modules/bootstrap/less/responsive-utilities.less";
 
+// Syntax Highlighting
+@import (inline) "../../node_modules/highlight.js/styles/tomorrow.css";
+
 *,
 ::before,
 ::after {
@@ -68,6 +71,7 @@ body {
 @import "components/navbar";
 @import "components/page-header";
 @import "components/sidebar";
+@import "components/type";
 
 @import "pages/plugins";
 @import "pages/repl";
