--- a/src/styles/components/navbar.less
+++ b/src/styles/components/navbar.less
@@ -1,6 +1,7 @@
 .navbar {
   font-family: @headings-font-family;
   font-weight: 600;
+  border-bottom-width: 2px;
 
   &-brand {
     font-size: 1.5em;
