--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -63,6 +63,7 @@ body {
   padding-top: 50px;
 }
 
+@import "components/buttons";
 @import "components/content";
 @import "components/featurette";
 @import "components/footer";
